// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GET /rfq/getRfqById/:id — equivalence + query budget buyer: same body as before 1`] = `
{
  "data": {
    "TERM_files": null,
    "action_holders": {
      "decision_rule": "ANY",
      "entity_type": "PO",
      "instance_id": "<instance_id#1>",
      "kind": "approval",
      "label": "Pending Approvers",
      "step_id": "<step_id#1>",
      "type": "approval",
      "users": [
        {
          "email": "a1.proc.poapp@test.local",
          "id": "<users.id#1>",
          "name": "A1 Proc PO Approver",
        },
      ],
    },
    "bid_end_date": "<ts#1>",
    "comment": "Test RFQ comment",
    "commercial_evaluators": [
      {
        "email": "a1.proc.commeval@test.local",
        "id": "<commercial_evaluators.id#1>",
        "name": "A1 Proc Commercial Negotiator",
      },
      {
        "email": "admin.a@test.local",
        "id": "<commercial_evaluators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<commercial_evaluators.id#3>",
        "name": "Super Admin",
      },
    ],
    "company_name": "Test Company",
    "contact_name": "Test Contact",
    "contact_number": "+91-9999999999",
    "created_by": 80011,
    "department_id": "<department_id#1>",
    "department_name": "Procurement",
    "has_dead_end_product": false,
    "has_received_quotes": true,
    "has_tech_stuck_product": false,
    "has_tech_unstartable_product": false,
    "hospitality_company_id": "<hospitality_company_id#1>",
    "hotel_id": "<hotel_id#1>",
    "hotel_name": "Hotel A-1",
    "id": "<data.id#1>",
    "is_published": 1,
    "is_quotes_present": true,
    "is_tender": 0,
    "lifecycle_stage": "PO_APPROVAL",
    "location": "Test Location",
    "po_initiators": [
      {
        "email": "a1.proc.poapp@test.local",
        "id": "<po_initiators.id#1>",
        "name": "A1 Proc PO Approver",
      },
      {
        "email": "admin.a@test.local",
        "id": "<po_initiators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<po_initiators.id#3>",
        "name": "Super Admin",
      },
    ],
    "process_id": "<process_id#1>",
    "process_name": "Standard Procurement",
    "products": [
      {
        "?column?": null,
        "comment": "",
        "datasheet_file": null,
        "finalization_status": "Another vendor is finalized",
        "finalized_vendor": {
          "finalized_amount": 1000,
          "vendor_id": "<vendor_id#1>",
          "vendor_name": "Alpha Vendor Pvt Ltd",
        },
        "has_approved_po": false,
        "id": "<products.id#1>",
        "is_dead_end": false,
        "is_tech_stuck": false,
        "lowest_quotation": {
          "quote_id": "<quote_id#1>",
          "total_price": 1000,
        },
        "name": "7 UP PEPSI 1.5 LTR",
        "participated_vendors_count": "2",
        "product_details": [
          {
            "description": "Auto-created from hospitality import for product "7 UP PEPSI"",
            "id": "<product_details.id#1>",
            "name": "7 UP PEPSI 1.5 LTR",
          },
        ],
        "product_id": "<product_id#1>",
        "product_specs": null,
        "qap_file": null,
        "spec_file": null,
        "tech_eval_clauses": [
          {
            "clause_text": "Clause 1",
            "clause_type": "clause",
            "id": "<tech_eval_clauses.id#1>",
            "weightage": 60,
          },
          {
            "clause_text": "Clause 2",
            "clause_type": "clause",
            "id": "<tech_eval_clauses.id#2>",
            "weightage": 40,
          },
        ],
        "tech_evaluation_status": {
          "all_clauses_responded": true,
          "has_response": true,
          "has_tech_eval": true,
          "is_accepted": true,
          "is_rejected": false,
          "rejection_reason": null,
          "responded_count": 2,
          "total_clauses": 2,
        },
        "variant": 0,
        "vendors_count": "2",
      },
      {
        "?column?": null,
        "comment": "",
        "datasheet_file": null,
        "finalization_status": "No vendor finalized yet",
        "finalized_vendor": null,
        "has_approved_po": false,
        "id": "<products.id#2>",
        "is_dead_end": false,
        "is_tech_stuck": false,
        "lowest_quotation": {
          "quote_id": "<quote_id#1>",
          "total_price": 1500,
        },
        "name": "7 UP PEPSI 330 ML",
        "participated_vendors_count": "2",
        "product_details": [
          {
            "description": "Auto-created from hospitality import for product "7 UP PEPSI"",
            "id": "<product_details.id#2>",
            "name": "7 UP PEPSI 330 ML",
          },
        ],
        "product_id": "<product_id#2>",
        "product_specs": null,
        "qap_file": null,
        "spec_file": null,
        "tech_eval_clauses": [],
        "tech_evaluation_status": {
          "all_clauses_responded": false,
          "has_response": false,
          "has_tech_eval": false,
          "is_accepted": false,
          "is_rejected": false,
          "rejection_reason": null,
          "responded_count": 0,
          "total_clauses": 0,
        },
        "variant": 0,
        "vendors_count": "2",
      },
    ],
    "project_id": null,
    "quotations": [],
    "quote_details": null,
    "ra_end_date": null,
    "ra_start_date": null,
    "response_email": "test@example.com",
    "reverse_auction": 1,
    "rfq_no": "<rfq_no#1>",
    "rfq_type": "RFQ",
    "status": 1,
    "technical_evaluation_by": null,
    "technical_evaluation_by_name": null,
    "technical_evaluators": [
      {
        "email": "a1.proc.techeval@test.local",
        "id": "<technical_evaluators.id#1>",
        "name": "A1 Proc Tech Evaluator",
      },
      {
        "email": "admin.a@test.local",
        "id": "<technical_evaluators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<technical_evaluators.id#3>",
        "name": "Super Admin",
      },
    ],
    "tender_fees": null,
    "tender_publish_date": "<ts#3>",
    "terms": [],
    "terms_and_conditions_files": null,
    "timestamp": "<ts#2>",
    "title": "Perf rich RFQ",
    "unseen_query_count": 0,
    "updated_by": 80011,
    "vendor_clarification_date": "<ts#4>",
    "vendor_profile_gstin": null,
    "vendor_rejections": [],
  },
  "status": 1,
}
`;

exports[`GET /rfq/getRfqById/:id — equivalence + query budget closed RFQ: close_comment still attached 1`] = `
{
  "data": {
    "TERM_files": null,
    "action_holders": null,
    "bid_end_date": "<ts#1>",
    "close_comment": "Reason: budget cut",
    "comment": "Test RFQ comment",
    "commercial_evaluators": [
      {
        "email": "a1.proc.commeval@test.local",
        "id": "<commercial_evaluators.id#1>",
        "name": "A1 Proc Commercial Negotiator",
      },
      {
        "email": "admin.a@test.local",
        "id": "<commercial_evaluators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<commercial_evaluators.id#3>",
        "name": "Super Admin",
      },
    ],
    "company_name": "Test Company",
    "contact_name": "Test Contact",
    "contact_number": "+91-9999999999",
    "created_by": 80011,
    "department_id": "<department_id#1>",
    "department_name": "Procurement",
    "has_dead_end_product": false,
    "has_received_quotes": true,
    "has_tech_stuck_product": false,
    "has_tech_unstartable_product": false,
    "hospitality_company_id": "<hospitality_company_id#1>",
    "hotel_id": "<hotel_id#1>",
    "hotel_name": "Hotel A-1",
    "id": "<data.id#1>",
    "is_published": 1,
    "is_quotes_present": true,
    "is_tender": 0,
    "lifecycle_stage": "PO_APPROVAL",
    "location": "Test Location",
    "po_initiators": [
      {
        "email": "a1.proc.poapp@test.local",
        "id": "<po_initiators.id#1>",
        "name": "A1 Proc PO Approver",
      },
      {
        "email": "admin.a@test.local",
        "id": "<po_initiators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<po_initiators.id#3>",
        "name": "Super Admin",
      },
    ],
    "process_id": "<process_id#1>",
    "process_name": "Standard Procurement",
    "products": [
      {
        "?column?": null,
        "comment": "",
        "datasheet_file": null,
        "finalization_status": "Another vendor is finalized",
        "finalized_vendor": {
          "finalized_amount": 1000,
          "vendor_id": "<vendor_id#1>",
          "vendor_name": "Alpha Vendor Pvt Ltd",
        },
        "has_approved_po": false,
        "id": "<products.id#1>",
        "is_dead_end": false,
        "is_tech_stuck": false,
        "lowest_quotation": {
          "quote_id": "<quote_id#1>",
          "total_price": 1000,
        },
        "name": "7 UP PEPSI 1.5 LTR",
        "participated_vendors_count": "2",
        "product_details": [
          {
            "description": "Auto-created from hospitality import for product "7 UP PEPSI"",
            "id": "<product_details.id#1>",
            "name": "7 UP PEPSI 1.5 LTR",
          },
        ],
        "product_id": "<product_id#1>",
        "product_specs": null,
        "qap_file": null,
        "spec_file": null,
        "tech_eval_clauses": [
          {
            "clause_text": "Clause 1",
            "clause_type": "clause",
            "id": "<tech_eval_clauses.id#1>",
            "weightage": 60,
          },
          {
            "clause_text": "Clause 2",
            "clause_type": "clause",
            "id": "<tech_eval_clauses.id#2>",
            "weightage": 40,
          },
        ],
        "tech_evaluation_status": {
          "all_clauses_responded": true,
          "has_response": true,
          "has_tech_eval": true,
          "is_accepted": true,
          "is_rejected": false,
          "rejection_reason": null,
          "responded_count": 2,
          "total_clauses": 2,
        },
        "variant": 0,
        "vendors_count": "2",
      },
      {
        "?column?": null,
        "comment": "",
        "datasheet_file": null,
        "finalization_status": "No vendor finalized yet",
        "finalized_vendor": null,
        "has_approved_po": false,
        "id": "<products.id#2>",
        "is_dead_end": false,
        "is_tech_stuck": false,
        "lowest_quotation": {
          "quote_id": "<quote_id#1>",
          "total_price": 1500,
        },
        "name": "7 UP PEPSI 330 ML",
        "participated_vendors_count": "2",
        "product_details": [
          {
            "description": "Auto-created from hospitality import for product "7 UP PEPSI"",
            "id": "<product_details.id#2>",
            "name": "7 UP PEPSI 330 ML",
          },
        ],
        "product_id": "<product_id#2>",
        "product_specs": null,
        "qap_file": null,
        "spec_file": null,
        "tech_eval_clauses": [],
        "tech_evaluation_status": {
          "all_clauses_responded": false,
          "has_response": false,
          "has_tech_eval": false,
          "is_accepted": false,
          "is_rejected": false,
          "rejection_reason": null,
          "responded_count": 0,
          "total_clauses": 0,
        },
        "variant": 0,
        "vendors_count": "2",
      },
    ],
    "project_id": null,
    "quotations": [],
    "quote_details": null,
    "ra_end_date": null,
    "ra_start_date": null,
    "response_email": "test@example.com",
    "reverse_auction": 1,
    "rfq_no": "<rfq_no#1>",
    "rfq_type": "RFQ",
    "status": 2,
    "technical_evaluation_by": null,
    "technical_evaluation_by_name": null,
    "technical_evaluators": [
      {
        "email": "a1.proc.techeval@test.local",
        "id": "<technical_evaluators.id#1>",
        "name": "A1 Proc Tech Evaluator",
      },
      {
        "email": "admin.a@test.local",
        "id": "<technical_evaluators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<technical_evaluators.id#3>",
        "name": "Super Admin",
      },
    ],
    "tender_fees": null,
    "tender_publish_date": "<ts#3>",
    "terms": [],
    "terms_and_conditions_files": null,
    "timestamp": "<ts#2>",
    "title": "Perf rich RFQ",
    "unseen_query_count": 0,
    "updated_by": 80011,
    "vendor_clarification_date": "<ts#4>",
    "vendor_profile_gstin": null,
    "vendor_rejections": [],
  },
  "status": 1,
}
`;

exports[`GET /rfq/getRfqById/:id — equivalence + query budget vendor (active subscription): same body as before 1`] = `
{
  "data": {
    "TERM_files": null,
    "action_holders": {
      "decision_rule": "ANY",
      "entity_type": "PO",
      "instance_id": "<instance_id#1>",
      "kind": "approval",
      "label": "Pending Approvers",
      "step_id": "<step_id#1>",
      "type": "approval",
      "users": [
        {
          "email": "a1.proc.poapp@test.local",
          "id": "<users.id#1>",
          "name": "A1 Proc PO Approver",
        },
      ],
    },
    "bid_end_date": "<ts#1>",
    "comment": "Test RFQ comment",
    "commercial_evaluators": [
      {
        "email": "a1.proc.commeval@test.local",
        "id": "<commercial_evaluators.id#1>",
        "name": "A1 Proc Commercial Negotiator",
      },
      {
        "email": "admin.a@test.local",
        "id": "<commercial_evaluators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<commercial_evaluators.id#3>",
        "name": "Super Admin",
      },
    ],
    "company_name": "Test Company",
    "contact_name": "Test Contact",
    "contact_number": "+91-9999999999",
    "created_by": 80011,
    "department_id": "<department_id#1>",
    "department_name": "Procurement",
    "has_dead_end_product": false,
    "has_received_quotes": true,
    "has_tech_stuck_product": false,
    "has_tech_unstartable_product": false,
    "hospitality_company_id": "<hospitality_company_id#1>",
    "hotel_id": "<hotel_id#1>",
    "hotel_name": "Hotel A-1",
    "id": "<data.id#1>",
    "is_published": 1,
    "is_quotes_present": true,
    "is_tender": 0,
    "lifecycle_stage": "PO_APPROVAL",
    "location": "Test Location",
    "po_initiators": [
      {
        "email": "a1.proc.poapp@test.local",
        "id": "<po_initiators.id#1>",
        "name": "A1 Proc PO Approver",
      },
      {
        "email": "admin.a@test.local",
        "id": "<po_initiators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<po_initiators.id#3>",
        "name": "Super Admin",
      },
    ],
    "process_id": "<process_id#1>",
    "process_name": "Standard Procurement",
    "products": [
      {
        "?column?": "latest_target_price",
        "comment": "",
        "datasheet_file": null,
        "finalization_status": "You are finalized",
        "finalized_vendor": {
          "finalized_amount": 1000,
          "vendor_id": "<vendor_id#1>",
          "vendor_name": "Alpha Vendor Pvt Ltd",
        },
        "has_approved_po": false,
        "id": "<products.id#1>",
        "is_dead_end": false,
        "is_tech_stuck": false,
        "lowest_quotation": {
          "quote_id": "<quote_id#1>",
          "total_price": 1000,
        },
        "name": "7 UP PEPSI 1.5 LTR",
        "product_details": [
          {
            "description": "Auto-created from hospitality import for product "7 UP PEPSI"",
            "id": "<product_details.id#1>",
            "name": "7 UP PEPSI 1.5 LTR",
          },
        ],
        "product_id": "<product_id#1>",
        "product_specs": null,
        "qap_file": null,
        "spec_file": null,
        "target_price": null,
        "tech_eval_clauses": [
          {
            "clause_text": "Clause 1",
            "clause_type": "clause",
            "id": "<tech_eval_clauses.id#1>",
            "weightage": 60,
          },
          {
            "clause_text": "Clause 2",
            "clause_type": "clause",
            "id": "<tech_eval_clauses.id#2>",
            "weightage": 40,
          },
        ],
        "tech_evaluation_status": {
          "all_clauses_responded": true,
          "has_response": true,
          "has_tech_eval": true,
          "is_accepted": true,
          "is_rejected": false,
          "rejection_reason": null,
          "responded_count": 2,
          "total_clauses": 2,
        },
        "variant": 0,
      },
      {
        "?column?": "latest_target_price",
        "comment": "",
        "datasheet_file": null,
        "finalization_status": "No vendor finalized yet",
        "finalized_vendor": null,
        "has_approved_po": false,
        "id": "<products.id#2>",
        "is_dead_end": false,
        "is_tech_stuck": false,
        "lowest_quotation": {
          "quote_id": "<quote_id#1>",
          "total_price": 1500,
        },
        "name": "7 UP PEPSI 330 ML",
        "product_details": [
          {
            "description": "Auto-created from hospitality import for product "7 UP PEPSI"",
            "id": "<product_details.id#2>",
            "name": "7 UP PEPSI 330 ML",
          },
        ],
        "product_id": "<product_id#2>",
        "product_specs": null,
        "qap_file": null,
        "spec_file": null,
        "target_price": null,
        "tech_eval_clauses": [],
        "tech_evaluation_status": {
          "all_clauses_responded": false,
          "has_response": false,
          "has_tech_eval": false,
          "is_accepted": false,
          "is_rejected": false,
          "rejection_reason": null,
          "responded_count": 0,
          "total_clauses": 0,
        },
        "variant": 0,
      },
    ],
    "project_id": null,
    "quotations": [
      {
        "created_by": 80101,
        "global_charges": [],
        "global_comment": null,
        "id": "<quotations.id#1>",
        "is_regret": 0,
        "payment_terms": [],
        "pricing_method": "TRADITIONAL",
        "products": [
          {
            "comment": "ok",
            "delivery_period": "7 days",
            "document_files": null,
            "entered_mrp": null,
            "mrp_discount": null,
            "mrp_discount_mode": null,
            "other_charges": [],
            "previous_document_files": null,
            "pricing_method": "TRADITIONAL",
            "product_id": "<product_id#1>",
            "product_name": null,
            "quantity": "10",
            "rfq_product_id": "<rfq_product_id#1>",
            "tax": 0,
            "tax_mode": "percentage",
            "total_price": 1000,
            "unit_price": 100,
            "variant": 0,
          },
          {
            "comment": "ok",
            "delivery_period": "7 days",
            "document_files": null,
            "entered_mrp": null,
            "mrp_discount": null,
            "mrp_discount_mode": null,
            "other_charges": [],
            "previous_document_files": null,
            "pricing_method": "TRADITIONAL",
            "product_id": "<product_id#2>",
            "product_name": null,
            "quantity": "10",
            "rfq_product_id": "<rfq_product_id#2>",
            "tax": 0,
            "tax_mode": "percentage",
            "total_price": 1500,
            "unit_price": 150,
            "variant": 0,
          },
        ],
        "status": 1,
        "timestamp": "<ts#5>",
      },
    ],
    "quote_details": {
      "global_charges": [],
      "global_comment": null,
      "global_payment_term": null,
      "gstin": null,
      "is_regret": 0,
      "regret_reason": null,
    },
    "ra_end_date": null,
    "ra_start_date": null,
    "response_email": "test@example.com",
    "reverse_auction": 1,
    "rfq_no": "<rfq_no#1>",
    "rfq_type": "RFQ",
    "status": 1,
    "technical_evaluation_by": null,
    "technical_evaluation_by_name": null,
    "technical_evaluators": [
      {
        "email": "a1.proc.techeval@test.local",
        "id": "<technical_evaluators.id#1>",
        "name": "A1 Proc Tech Evaluator",
      },
      {
        "email": "admin.a@test.local",
        "id": "<technical_evaluators.id#2>",
        "name": "Company A Admin",
      },
      {
        "email": "super.admin@test.local",
        "id": "<technical_evaluators.id#3>",
        "name": "Super Admin",
      },
    ],
    "tender_fees": null,
    "tender_publish_date": "<ts#3>",
    "terms": [],
    "terms_and_conditions_files": null,
    "timestamp": "<ts#2>",
    "title": "Perf rich RFQ",
    "unseen_query_count": "0",
    "updated_by": 80011,
    "vendor_clarification_date": "<ts#4>",
    "vendor_payment_status": null,
    "vendor_profile_gstin": null,
    "vendor_rejections": [],
  },
  "status": 1,
}
`;
